...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_outer_big"
            android:orientation="vertical"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_details_list"
            android:name="org.udacity.android.arejas.recipes.ui.RecipeListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:visibility="gone"
            tools:visibility="visible"
...
