...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_outer_big"
                android:orientation="vertical"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipes_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_item_margin"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
                android:visibility="gone"
                tools:visibility="visible"
...
