...
    <!-- Constants -->
    <string name="base_url_default_recipes">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/</string>
    <string name="file_url_default_recipes">baking.json</string>

    <!-- General strings -->
    <string name="app_name">Recipes</string>
    <string name="title_recipes_list">Recipes</string>
    <string name="title_recipe_details_list">Recipe Details</string>
    <string name="title_recipe_detail_info">Recipe detail info</string>
    <string name="title_recipe_step">Recipe Step</string>
    <string name="title_recipe_ingredients">Recipe Ingredients</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
...
